--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,8 +12,8 @@ body {
 
 <body>
 <div style="font-family: Arial, Gotham, 'Helvetica Neue', Helvetica, sans-serif; ">
-<div style="font-size: 18pt; font-weight: bold; text-align: center; color: #D13F27;">Snowfight Go Privacy Policy</div>
-<div style="font-size: 14pt; color: #415464; margin-top: 15pt; margin-left: auto; margin-right: auto; width: 95%; max-width: 800pt;">Last updated 25th July 2019<br><br>
+<div style="font-size: 18px; font-weight: bold; text-align: center; color: #D13F27;">Snowfight Go Privacy Policy</div>
+<div style="font-size: 14px; color: #415464; margin-top: 15px; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">Last updated 25th July 2019<br><br>
 Snowfight Go respects the privacy concerns of all users of its Services. The only information we currently collect is the IP address of the user, the game settings they select (nickname, skin, etc. necessary for multiplayer gameplay), the device model, operating system and the primary language setting on the user's device. We discard all of this information soon after the game ends.<br><br>
 Snowfight Go may disclose information to appropriate third parties in special cases where legal action is required.<br><br>
 By using the Services, you agree to recognize and be bound by this Privacy Policy, and you consent to the collection and use of your data as articulated in its terms.<br><br>
