--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -16,8 +16,9 @@ div {
 <body>
 <div>
 <div style="font-size: 36px; font-weight: bold; text-align: center; color: #ffffff; background-color: #3C4C52; height: 80px; line-height: 80px" >SnowFight Go Privacy Policy</div>
-<div style="font-size: 20px; color: #38454A; margin-top: 15px; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">Last updated 25th July 2019<br><br>
+<div style="font-size: 20px; color: #38454A; margin-top: 15px; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">Last updated on September 22nd, 2020<br><br>
 SnowFight Go respects the privacy concerns of all users of its Services. The only information we currently collect is the IP address of the user, the game settings they select (nickname, skin, etc. necessary for multiplayer gameplay), the device model, operating system and the primary language setting on the user's device. We discard all of this information soon after the game ends.<br><br>
+We have a third party affiliation with Google AdMob. You may review their privacy policy if you are concerned about the data they might collect.<br><br>
 SnowFight Go may disclose information to appropriate third parties in special cases where legal action is required.<br><br>
 By using the Services, you agree to recognize and be bound by this Privacy Policy, and you consent to the collection and use of your data as articulated in its terms.<br><br>
 We may occasionally revise our privacy policy by posting the changes here. If you have any questions about this Privacy Policy, please contact us by email: support@gamen.io<br><br></div>
